--- a/final-project/src/App.css
+++ b/final-project/src/App.css
@@ -3,17 +3,20 @@
 :root{
   /* Primary Colors */
   --green900: #495E57;
+  --green900_50:#495e578d;
   --yellow900: #F4CE14;
+  --yellow700: #c8a90f;
   /* Secondary Colors */
   --beige900: #EE9972;
   --beige500: #FBDABB;
   --white900: #EDEFEE;
-  --black900: #333333; 
-  /* widths */
+  --white900_50: #edefee7e;
+  --black900: #333333;
+  --error:rgb(220, 56, 56);
+  /* widths & heights */
   --maxContainerWidth:900px;
-  
+  --headerHeight: 4.5rem;
 }
-
 *{
   box-sizing: border-box;
   color: var(--black900);
@@ -21,13 +24,61 @@
   margin: 0;
   padding: 0;
 }
-
+button{
+  background-color: var(--yellow900);
+  font-family: 'Markazi Text', serif;
+  font-weight: bold;
+  font-size: 1.2rem;
+  width: fit-content;
+  padding: .5rem 1rem;
+  border: none;
+  outline: none;
+  border-radius: 1rem;
+  transition: all 300ms;
+}
+button:hover{
+  background-color: var(--yellow700);
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.199);
+  transition: all 300ms;
+}
+.secondaryButton{
+  background-color: transparent;
+}
+.secondaryButton:hover{
+  background-color: transparent;
+  box-shadow: none;
+}
+h1{
+  font-family: 'Markazi Text', serif;
+  color: var(--yellow900);
+  font-size: 4rem;
+  line-height: 4rem;
+}
+label{
+  color: var(--white900);
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+input, select{
+  padding: .5rem 1rem;
+  font-size: 1.2rem;
+  border-radius: .5rem;
+  border: none;
+  background-color: var(--white900_50);
+  color: var(--black900);
+}
+input:focus, .bookingForm select:focus{
+  outline: 2px solid var(--yellow900);
+}
 
 /* --------------------------Header--------------------------- */
 
 header{
   display: flex;
   justify-content: center;
+  height: var(--headerHeight);
 }
 header .container{
   display: flex;
@@ -52,6 +103,17 @@ header li{
 }
 header li:hover{
   color: var(--green900);
+}
+nav a{
+  text-decoration: none;
+  background-color: #f4cf1400;
+  transition: all 300ms;
+  padding: .5rem 1rem;
+  border-radius: .5rem;
+}
+nav a:hover{
+  background-color: #f4cf14;
+  transition: all 300ms;
 }
 
 /* --------------------------Hero------------------------------ */
@@ -78,12 +140,6 @@ header li:hover{
   justify-content: center;
   max-width: 20rem;
 }
-#hero h1{
-  font-family: 'Markazi Text', serif;
-  color: var(--yellow900);
-  font-size: 4rem;
-  line-height: 4rem;
-}
 #hero h2{
   font-family: 'Markazi Text', serif;
   font-size: 2.5rem;
@@ -104,17 +160,8 @@ header li:hover{
   font-size: 1.5rem;
   padding: .5rem 0;
 }
-#hero button{
-  background-color: var(--yellow900);
-  font-family: 'Markazi Text', serif;
-  font-weight: bold;
-  font-size: 1.2rem;
-  width: fit-content;
-  padding: .5rem 1rem;
-  border: none;
-  outline: none;
-  border-radius: 1rem;
-}
+
+
 
 /* -----------------------Highlights--------------------------- */
 
@@ -135,20 +182,6 @@ header li:hover{
   width: 100%;
   justify-content: space-between;
   align-items: center;
-}
-.title-container h1{
-  font-family: 'Markazi Text', serif;
-  font-size: 4rem;
-}
-.title-container button{
-  border: none;
-  background-color: var(--yellow900);
-  padding: .7rem 1rem;
-  width: fit-content;
-  height: fit-content;
-  border-radius: 1rem;
-  font-weight: bold;
-  font-size: 1rem;
 }
 .cards-container{
   display: flex;
@@ -206,4 +239,130 @@ header li:hover{
   width: fit-content;
   padding: .5rem 1rem;
   border-radius: .5rem;
+}
+
+/* ---------------------Reservations---------------------- */
+
+#reservations{
+  display: flex;
+  background: no-repeat url(./assets/icons_assets/restaurant2.jpg) ;
+  background-size: cover;
+  height: calc(100vh - var(--headerHeight));
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+#reservations .container{
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  max-width: var(--maxContainerWidth);
+  justify-content: center;
+  padding: 3rem;
+  backdrop-filter: blur(5px);
+  border-radius: 1rem;
+  background-color: var(--green900_50);
+}
+#reservations h1{
+  padding-bottom: 1rem;
+  align-self: center;
+}
+.bookingForm{
+  display: flex;
+  flex-direction: column;
+}
+input.submitButton{
+  margin-top: 1rem;
+  background-color: var(--yellow900);
+  cursor: pointer;
+  font-weight: bold;
+}
+input.submitButton:hover{
+  background-color: var(--yellow700);
+}
+p.formError {
+  color: var(--error);
+}
+.reservation-card{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: var(--white900_50);
+  border-radius: .5rem;
+  gap: .5rem;
+}
+.reservation-card button{
+  align-self: center;
+} 
+.form-reservations-container{
+  display: flex;
+  gap: 1rem;
+  max-height: 50rem;
+}
+.prevReservations{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-height: 100%;
+  overflow-y: scroll;
+}
+
+/* ---------------------Login---------------------- */
+
+#login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:no-repeat center url(./assets/icons_assets/restaurant.jpg);
+  background-size: cover;
+  height: calc(100vh - var(--headerHeight));
+}
+#login .container{
+  max-width: var(--maxContainerWidth);
+  background-color: var(--green900_50);
+  border-radius: 1rem;
+  padding: 1rem;
+  backdrop-filter: blur(10px);
+}
+.loginForm{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+/* ---------------------Logout---------------------- */
+
+#logout{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - var(--headerHeight) - var(--headerHeight));
+}
+
+#logout .buttonContainer{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 1rem;
+}
+
+
+/* ---------------------Footer---------------------- */
+
+footer{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  height: var(--headerHeight);
+  background-color: var(--beige500);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.436);
+  padding: .5rem 1rem;
+}
+
+.iconSocialMedia{
+  width: 2rem;
+  height: 2rem;
+  padding: .2rem;
 }
