--- a/final-project/src/App.css
+++ b/final-project/src/App.css
@@ -79,6 +79,8 @@ header{
   display: flex;
   justify-content: center;
   height: var(--headerHeight);
+  box-shadow: 0px 0px 20px rgb(0, 0, 0);
+  z-index: 1;
 }
 header .container{
   display: flex;
@@ -169,6 +171,7 @@ nav a:hover{
   display: flex;
   justify-content: center;
   width: 100%;
+  padding: 1rem 0;
 }
 .highlights .container{
   display: flex;
@@ -347,20 +350,86 @@ p.formError {
   padding: 1rem;
 }
 
+/* ---------------------Menu---------------------- */
+
+#menu{
+  background-color: var(--green900);
+  display: flex;
+  justify-content: center;
+}
+#menu .container{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: var(--maxContainerWidth);
+  justify-content: space-between;
+  width: 100%;
+}
+.cards_container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  gap: 1rem;
+  padding: 1rem 0;
+}
+.dishCard{
+  display: flex;
+  flex-direction: column;
+  max-width: 18rem;
+  overflow: hidden;
+  height: fit-content;
+  background-color: var(--white900_50);
+  border-radius: .5rem;
+}
+.dishCard img {
+  width: 18rem;
+  height: 10rem;
+  object-fit: cover;
+}
+.dishCard_datos{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  align-content: space-between;
+  padding: 1rem;
+  gap: .5rem;
+}
+.dishCard p {
+  overflow: hidden;
+  display: -webkit-box;
+   -webkit-line-clamp: 6;
+           line-clamp: 6; 
+   -webkit-box-orient: vertical;
+}
+
 
 /* ---------------------Footer---------------------- */
 
 footer{
   display: flex;
+  flex-direction: column;
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  height: var(--headerHeight);
   background-color: var(--beige500);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.436);
-  padding: .5rem 1rem;
+  box-shadow: 0px 0px 20px rgb(51, 51, 51);
+  padding: 2rem 1rem;
 }
-
+footer .container{
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  gap: 1rem;
+  width: 100%;
+  max-width: var(--maxContainerWidth);
+  text-align: center;
+}
+.footer_socialsLinks{
+  display: flex;
+  justify-content: space-between;
+}
 .iconSocialMedia{
   width: 2rem;
   height: 2rem;
