--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root{
   /* Primary Colors */
   --green900: #495E57;
-  --green900_50:#495e578d;
+  --green900_50:#495e57b8;
   --yellow900: #F4CE14;
   --yellow700: #c8a90f;
   /* Secondary Colors */
@@ -24,6 +24,24 @@
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar{
+  width: .7rem;
+}
+::-webkit-scrollbar-thumb{
+  background: var(--green900);
+  opacity: 50%;
+  border-radius: .5rem;
+  transition: all 300ms;
+}
+::-webkit-scrollbar-thumb:hover{
+  opacity: 100%;
+  transition: all 300ms;
+}
+::-webkit-scrollbar-track{
+  background: var(--white900_50);
+}
+
 button{
   background-color: var(--yellow900);
   font-family: 'Markazi Text', serif;
@@ -72,6 +90,7 @@ input, select{
 input:focus, .bookingForm select:focus{
   outline: 2px solid var(--yellow900);
 }
+
 
 /* --------------------------Header--------------------------- */
 
@@ -244,13 +263,45 @@ nav a:hover{
   border-radius: .5rem;
 }
 
+/* ----------------------About Us------------------------- */
+
+#about{
+  display: flex;
+  min-height: calc(100vh - var(--headerHeight));
+  justify-content: center;
+  align-items: center;
+  background-image: url(./assets/icons_assets/Mario\ and\ Adrian\ A.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+#about .container{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: var(--maxContainerWidth);
+  background-color: var(--green900_50);
+  backdrop-filter: blur(20px); 
+  height: auto;
+  border-radius: 1rem;
+  padding: 2rem; 
+  margin: 1rem;
+}
+#about p, #about strong{
+  color: var(--white900);
+  text-align: left;
+  font-size: 1.2rem;
+  text-shadow: 0px 0px 10px var(--black900);
+}
+
+
 /* ---------------------Reservations---------------------- */
 
 #reservations{
   display: flex;
   background: no-repeat url(./assets/icons_assets/restaurant2.jpg) ;
   background-size: cover;
-  height: calc(100vh - var(--headerHeight));
+  min-height: calc(100vh - var(--headerHeight));
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -258,13 +309,13 @@ nav a:hover{
 #reservations .container{
   display: flex;
   flex-direction: column;
-  height: fit-content;
   max-width: var(--maxContainerWidth);
   justify-content: center;
   padding: 3rem;
   backdrop-filter: blur(5px);
   border-radius: 1rem;
   background-color: var(--green900_50);
+  margin: 1rem;
 }
 #reservations h1{
   padding-bottom: 1rem;
@@ -299,15 +350,15 @@ p.formError {
 } 
 .form-reservations-container{
   display: flex;
+  flex-direction: column;
   gap: 1rem;
-  max-height: 50rem;
 }
 .prevReservations{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
   max-height: 100%;
-  overflow-y: scroll;
 }
 
 /* ---------------------Login---------------------- */
@@ -364,11 +415,12 @@ p.formError {
   max-width: var(--maxContainerWidth);
   justify-content: space-between;
   width: 100%;
+  margin: 1rem;
 }
 .cards_container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   gap: 1rem;
   padding: 1rem 0;
@@ -379,18 +431,21 @@ p.formError {
   max-width: 18rem;
   overflow: hidden;
   height: fit-content;
+  min-height: 23rem;
   background-color: var(--white900_50);
   border-radius: .5rem;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.486);
 }
 .dishCard img {
   width: 18rem;
   height: 10rem;
   object-fit: cover;
+  box-shadow: 0px 0px 20px black;
 }
 .dishCard_datos{
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 12.6rem;
   justify-content: space-between;
   align-content: space-between;
   padding: 1rem;
@@ -403,7 +458,9 @@ p.formError {
            line-clamp: 6; 
    -webkit-box-orient: vertical;
 }
-
+.dishCard h3{
+  text-shadow: 0px 5px 15px black;
+}
 
 /* ---------------------Footer---------------------- */
 
@@ -416,6 +473,7 @@ footer{
   background-color: var(--beige500);
   box-shadow: 0px 0px 20px rgb(51, 51, 51);
   padding: 2rem 1rem;
+  bottom: 0px;
 }
 footer .container{
   display: flex;
