--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,11 @@ input, select{
 input:focus, .bookingForm select:focus{
   outline: 2px solid var(--yellow900);
 }
-
+.icons{
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: .5rem;
+}
 
 /* --------------------------Header--------------------------- */
 
@@ -99,7 +103,6 @@ header{
   justify-content: center;
   height: var(--headerHeight);
   box-shadow: 0px 0px 20px rgb(0, 0, 0);
-  z-index: 1;
 }
 header .container{
   display: flex;
@@ -109,21 +112,25 @@ header .container{
   padding: 1rem;
   justify-self: center;
 }
-nav{
-  align-self: center;
-}
-header ul{
+ul{
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
-header li{
+li{
   list-style: none;
   font-weight: bold;
   text-align: center;
 }
-header li:hover{
+li:hover{
   color: var(--green900);
+}
+nav{
+  align-self: center;
+}
+nav a:hover{
+  background-color: #f4cf14;
+  transition: all 300ms;
 }
 nav a{
   text-decoration: none;
@@ -132,9 +139,49 @@ nav a{
   padding: .5rem 1rem;
   border-radius: .5rem;
 }
-nav a:hover{
-  background-color: #f4cf14;
+.burger{
+  display: none;
+  cursor: pointer;
+}
+.burgerMenu{
+  display: none;
+  opacity: 0;
+  z-index: 1;
+  position: fixed;
+  top: var(--headerHeight);
+  text-align: center;
+  justify-self: flex-end;
+  background-color: var(--white900_50);
+  backdrop-filter: blur(10px);
+  width: 100%;
+  padding: 1rem;
+  justify-content: center;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 0 0 1rem 1rem;
   transition: all 300ms;
+}
+.burgerMenu ul{
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+  font-size: 1.5rem;
+}
+.burgerMenu a{
+  font-family: 'Markazi Text', serif;
+}
+.active{
+  display: flex;
+  opacity: 1;
+
+}
+
+@media screen and (max-width: 750px){
+  .burger{
+    display: block;
+  }
+  header .container nav{
+    display: none;
+  }
 }
 
 /* --------------------------Hero------------------------------ */
@@ -181,7 +228,12 @@ nav a:hover{
   font-size: 1.5rem;
   padding: .5rem 0;
 }
-
+@media screen and (max-width: 576px) {
+  #hero .container{
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 
 /* -----------------------Highlights--------------------------- */
@@ -309,9 +361,9 @@ nav a:hover{
 #reservations .container{
   display: flex;
   flex-direction: column;
-  max-width: var(--maxContainerWidth);
+  max-width: 40rem;
   justify-content: center;
-  padding: 3rem;
+  padding: 1rem;
   backdrop-filter: blur(5px);
   border-radius: 1rem;
   background-color: var(--green900_50);
@@ -344,6 +396,7 @@ p.formError {
   background-color: var(--white900_50);
   border-radius: .5rem;
   gap: .5rem;
+  min-width: 18rem;
 }
 .reservation-card button{
   align-self: center;
@@ -461,6 +514,11 @@ p.formError {
 .dishCard h3{
   text-shadow: 0px 5px 15px black;
 }
+/* ------------------Order online------------------- */
+
+#order{
+  min-height: calc(100vh - var(--headerHeight));
+}
 
 /* ---------------------Footer---------------------- */
 
@@ -487,9 +545,13 @@ footer .container{
 .footer_socialsLinks{
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
 }
-.iconSocialMedia{
-  width: 2rem;
-  height: 2rem;
-  padding: .2rem;
+
+
+@media screen and (max-width: 576px) {
+  .footer_socialsLinks{
+    flex-direction: column;
+  }
 }
+
